# boidoid

./: .gitignore  README.md  main.go
bevy/boidoid/: Cargo.toml  run.sh
bevy/boidoid/src/: lib.rs  main.rs
cpp/: bench_build.sh  build.sh  main.cpp
go/: boidoid.go  boidoid_test.go  go.mod
